fix for the popup removing background and issue with first link in competency. Also updated layout on dropdown selection of level and position

--- a/Web/Pages/CCGMember/AllPositions.cshtml
+++ b/Web/Pages/CCGMember/AllPositions.cshtml
@@ -7,7 +7,7 @@
 }
     <section role="contentinfo">
         <nav role="navigation" id="wb-bc" property="breadcrumb">
-            <h2>
+            <h2 class="wb-inv">
                 @Localizer["You are here:"]
             </h2>
             <div class="row">
@@ -24,7 +24,7 @@
             </ul>
         </nav>
         <div class="col-md-12">
-            <h2 class="mrgn-bttm-xl"><b>@Localizer["AllPositions"]</b></h2>
+            <h2 class="mrgn-tp-0 mrgn-bttm-lg"><b>@Localizer["AllPositions"]</b></h2>
             <form>
                 <p class="mrgn-bttm-xl">
                     <input type="text" asp-for="Filter" />
