--- a/Web/Pages/CCGMember/Compare/AllObjective.cshtml
+++ b/Web/Pages/CCGMember/Compare/AllObjective.cshtml
@@ -255,7 +255,7 @@
         </nav>
         <div class="col-md-12">
 
-            <h2 class="mrgn-bttm-md"><b>@Localizer["AllPositions"]</b></h2>
+            <h2 class="mrgn-tp-0 mrgn-bttm-md"><b>@Localizer["AllPositions"]</b></h2>
             <form>
                 <p class="mrgn-bttm-xl">
                     <input type="text" asp-for="Filter" />
