--- a/Web/Pages/CCGMember/SearchType.cshtml
+++ b/Web/Pages/CCGMember/SearchType.cshtml
@@ -45,7 +45,7 @@
                 <li class="previous"><a asp-page="Details" asp-all-route-data="@routedataprevious" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
             </ul>
         </nav>
-        <h2 class="mrgn-bttm-md"><b>@Localizer["Question1"]</b></h2>
+        <h2 class="mrgn-tp-0 mrgn-bttm-md"><b>@Localizer["Question1"]</b></h2>
         <div class="row">
 
             <div class="col-md-4 col-sm-4 mrgn-bttm-md">
