--- a/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
@@ -87,7 +87,7 @@ else if (!(Model.PageSubmit == "true"))
     </div>
 
     <div class="clearfix"></div>
-    <h1>@Localizer["h1Text"]</h1>
+    <h1 class="mrgn-tp-0">@Localizer["h1Text"]</h1>
     <!--h4>@Localizer["h4Text"]</h4-->
     <form method="post">
         <!--div class="mrgn-bttm-xl">
