--- a/Web/Pages/Candidate/Seagoing/Crew/Deck/PositionList.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Crew/Deck/PositionList.cshtml
@@ -31,7 +31,7 @@
             </nav>
         </div>
         <div class="mrgn-tp-sm">
-            <h3 class="text-center">@Localizer["POSITION RESULTS"]</h3>
+            <h2>@Localizer["POSITION RESULTS"]</h2>
             <h5>@Model.Positions.Length @Localizer[countmessage]</h5>
             <table class="table table-hover table-responsive table-bordered">
                 <thead>
