--- a/Web/Pages/Student/College/Seagoing/Officer/Engineering.cshtml
+++ b/Web/Pages/Student/College/Seagoing/Officer/Engineering.cshtml
@@ -31,8 +31,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="mrgn-tp-sm">
-            <h3 class="text-center">@Localizer["results"]</h3>
+            <h2>@Localizer["results"]</h2>
 
             <table class="table table-hover table-responsive table-bordered">
                 <thead>
@@ -82,5 +81,4 @@
                 </div>
             </div>
         -->
-        </div>
     </section>
