--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -14,172 +14,172 @@
                             };
 }
 
-    <section role="contentinfo">
-        <nav role="navigation" id="wb-bc" property="breadcrumb">
-            <h2>
-                @Localizer["You are here:"]
-            </h2>
-            <div class="row">
-                <ol class="breadcrumb">
-                    <li><a asp-page="../Index">@Localizer["Home"]</a></li>
-                    <li><a asp-page="AllPositions">@Localizer["Categories"]</a></li>
-                    <li><a asp-page="CurrentPosition" asp-all-route-data="routedata">@Localizer["Select"]</a></li>
-                    <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Current Position"]</a></li>
-                </ol>
+<section role="contentinfo">
+    <nav role="navigation" id="wb-bc" property="breadcrumb">
+        <h2>
+            @Localizer["You are here:"]
+        </h2>
+        <div class="row">
+            <ol class="breadcrumb">
+                <li><a asp-page="../Index">@Localizer["Home"]</a></li>
+                <li><a asp-page="AllPositions">@Localizer["Categories"]</a></li>
+                <li><a asp-page="CurrentPosition" asp-all-route-data="routedata">@Localizer["Select"]</a></li>
+                <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Current Position"]</a></li>
+            </ol>
+        </div>
+    </nav>
+    <div class="col-sm-12">
+        <div class="mrgn-tp-0 mrgn-bttm-md">
+            <a title="@Localizer["Save PDF"]" target="_blank" href="@Url.Action("PositionDetails","ToPdf", new { id = Model.Position.JobTitleId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"> <span class="glyphicon glyphicon-save-file pull-right" alt="@Localizer["Save PDF"]"></span></a>
+        </div>
+        <div class="clearfix"></div>
+        <div class="row">
+            <nav role="navigation">
+                <h2 class="wb-inv">Document navigation</h2>
+                <ul class="pager">
+                    <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="CurrentPosition" asp-all-route-data="routedata">@Localizer["Previous"]</a></li>
+                    <li class="next"><a class="btn btn-default" type="button" rel="next" asp-page="SearchType" asp-all-route-data="routedata">@Localizer["Next"]</a></li>
+                </ul>
+            </nav>
+        </div>
+        <br />
+        @if (Model.Position.JobTitleEng.Contains("MCTS"))
+        {
+            <div class="col-sm-12 well">
+                <h4 class="mrgn-tp-0">@Localizer["PDAPText"]</h4>
+                <p>@Localizer["MCTSdesc"]</p>
+                <p><a style="text-decoration:none" alt="@Localizer["MCTSlinkalt"]" href="@Localizer["MCTSUrl"]" target="_blank">@Localizer["MCTSUrl"] &nbsp;&nbsp;<span style="color:#000" class="glyphicon glyphicon-new-window"></span></a></p>
             </div>
-        </nav>
-        <div class="col-sm-12">
-            <div class="mrgn-tp-md mrgn-bttm-md">
-                <a title="@Localizer["Save PDF"]" target="_blank" href="@Url.Action("PositionDetails","ToPdf", new { id = Model.Position.JobTitleId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"> <span class="glyphicon glyphicon-save-file pull-right" alt="@Localizer["Save PDF"]"></span></a>
+        }
+        @if (Model.Position.JobTitleEng.Contains("MELDEV"))
+        {
+            <div class="col-sm-12 well">
+                <h4 class="mrgn-tp-0">@Localizer["PDAPText"]</h4>
+                <p>@Localizer["MELDEVdesc"]</p>
+                <p><a style="text-decoration:none" alt="@Localizer["MELDEVlinkalt"]" href="@Localizer["MELDEVUrl"]" target="_blank">@Localizer["MELDEVUrl"] &nbsp;&nbsp;<span style="color:#000" class="glyphicon glyphicon-new-window"></span></a></p>
             </div>
-            <div class="clearfix"></div>
-            <div class="row">
-                <nav role="navigation">
-                    <h2 class="wb-inv">Document navigation</h2>
-                    <ul class="pager">
-                        <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="CurrentPosition" asp-all-route-data="routedata">@Localizer["Previous"]</a></li>
-                        <li class="next"><a class="btn btn-default" type="button" rel="next" asp-page="SearchType" asp-all-route-data="routedata">@Localizer["Next"]</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <br />
-            @if (Model.Position.JobTitleEng.Contains("MCTS"))
-            {
-                <div class="col-sm-12 well">
-                    <h4 class="mrgn-tp-0">@Localizer["PDAPText"]</h4>
-                    <p>@Localizer["MCTSdesc"]</p>
-                    <p><a style="text-decoration:none" alt="@Localizer["MCTSlinkalt"]" href="@Localizer["MCTSUrl"]" target="_blank">@Localizer["MCTSUrl"] &nbsp;&nbsp;<span style="color:#000" class="glyphicon glyphicon-new-window"></span></a></p>
-                </div>
-            }
-            @if (Model.Position.JobTitleEng.Contains("MELDEV"))
-            {
-                <div class="col-sm-12 well">
-                    <h4 class="mrgn-tp-0">@Localizer["PDAPText"]</h4>
-                    <p>@Localizer["MELDEVdesc"]</p>
-                    <p><a style="text-decoration:none" alt="@Localizer["MELDEVlinkalt"]" href="@Localizer["MELDEVUrl"]" target="_blank">@Localizer["MELDEVUrl"] &nbsp;&nbsp;<span style="color:#000" class="glyphicon glyphicon-new-window"></span></a></p>
-                </div>
-            }
+        }
 
-            @if (Model.Position.JobTitleEng.Contains("Commanding"))
-            {
-                <div class="col-sm-12 well">
-                    <h4 class="mrgn-tp-0">@Localizer["Commanding Officer"]</h4>
-                    <p>@Localizer["MAOtext"]</p>
-                </div>
-            }
-            <div class="clearfix"></div>
-            <h2><b>@Localizer["Current Position Details"]</b></h2>
-            <h4>@Localizer["USERACTION"]</h4>
-            <table class="table table-hover table-bordered" width="100%" border="0" cellspacing="0" cellpadding="0">
-                <thead>
+        @if (Model.Position.JobTitleEng.Contains("Commanding"))
+        {
+            <div class="col-sm-12 well">
+                <h4 class="mrgn-tp-0">@Localizer["Commanding Officer"]</h4>
+                <p>@Localizer["MAOtext"]</p>
+            </div>
+        }
+        <div class="clearfix"></div>
+        <h2 class="mrgn-tp-0"><b>@Localizer["Current Position Details"]</b></h2>
+        <h4>@Localizer["USERACTION"]</h4>
+        <table class="table table-hover table-bordered" width="100%" border="0" cellspacing="0" cellpadding="0">
+            <thead>
+                <tr>
+                    <th class="bg-primary" colspan="2">@Localizer["POSITION DETAILS"]: @Model.Position.JobGroupLevelCode @(isEnglish? Model.Position.JobTitleEng: Model.Position.JobTitleFre)</th>
+                </tr>
+            </thead>
+            <tbody>
+                @if (Model.Position.JobDescriptionEng != "" && Model.Position.JobDescriptionFre != "")
+                {
                     <tr>
-                        <th class="bg-primary" colspan="2">@Localizer["POSITION DETAILS"]: @Model.Position.JobGroupLevelCode @(isEnglish? Model.Position.JobTitleEng: Model.Position.JobTitleFre)</th>
+                        <th style="background-color:#f2f2f2" colspan="2">@Localizer["DESCRIPTION"]</th>
                     </tr>
-                </thead>
-                <tbody>
-                    @if (Model.Position.JobDescriptionEng != "" && Model.Position.JobDescriptionFre != "")
+                    <tr>
+                        <td colspan="2">@(isEnglish ? Model.Position.JobDescriptionEng : Model.Position.JobDescriptionFre)</td>
+                    </tr>
+                }
+                <tr>
+                    <th style="background-color:#f2f2f2" colspan="2">@Localizer["REGIONS"]</th>
+                </tr>
+                @if (Model.JobLocationRegions.Any())
+                {
+                    @foreach (var c in Model.JobLocationRegions)
                     {
+                        var key = "d" + c.JobLocationRegionId.ToString();
                         <tr>
-                            <th style="background-color:#f2f2f2" colspan="2">@Localizer["DESCRIPTION"]</th>
-                        </tr>
-                        <tr>
-                            <td colspan="2">@(isEnglish ? Model.Position.JobDescriptionEng : Model.Position.JobDescriptionFre)</td>
+                            <td colspan="2">@(isEnglish ? c.NameEng : c.NameFre)</td>
                         </tr>
                     }
+                }
+                else
+                {
                     <tr>
-                        <th style="background-color:#f2f2f2" colspan="2">@Localizer["REGIONS"]</th>
+                        <td colspan="2">@Localizer["noregions"]</td>
                     </tr>
-                    @if (Model.JobLocationRegions.Any())
+                }
+                <tr>
+                    <th style="background-color:#f2f2f2" colspan="2">@Localizer["CERTIFICATIONS"]</th>
+                </tr>
+                @if (Model.PositionCertificates.Any(e => e.Active != 0))
+                {
+                    @foreach (var c in Model.PositionCertificates.Where(e => e.Active != 0))
                     {
-                        @foreach (var c in Model.JobLocationRegions)
+                        var key = "c" + c.Id.ToString();
+                        <tr>
+                            <td colspan="2">@(isEnglish ? c.NameEng : c.NameFre) @(isEnglish ? c.DescEng : c.DescFre)</td>
+                        </tr>
+                    }
+                }
+                else
+                {
+                    <tr>
+                        <td colspan="2">@Localizer["No Certifications"]</td>
+                    </tr>
+                }
+                @if (Model.PositionCompetencyRatings.Any())
+                {
+                    @foreach (var competencytype in Model.PositionCompetencyRatings)
+                    {
+                        if (competencytype.Any(e => e.Active != 0))
                         {
-                            var key = "d" + c.JobLocationRegionId.ToString();
                             <tr>
-                                <td colspan="2">@(isEnglish ? c.NameEng : c.NameFre)</td>
+                                <th style="background-color:#f2f2f2" width="80%"> @(isEnglish ? competencytype.FirstOrDefault()?.TypeNameEng.ToUpper() : competencytype.FirstOrDefault()?.TypeNameFre.ToUpper())</th>
+                                <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["LEVEL"]</th>
                             </tr>
-                        }
-                    }
-                    else
-                    {
-                        <tr>
-                            <td colspan="2">@Localizer["noregions"]</td>
-                        </tr>
-                    }
-                    <tr>
-                        <th style="background-color:#f2f2f2" colspan="2">@Localizer["CERTIFICATIONS"]</th>
-                    </tr>
-                    @if (Model.PositionCertificates.Any(e => e.Active != 0))
-                    {
-                        @foreach (var c in Model.PositionCertificates.Where(e => e.Active != 0))
-                        {
-                            var key = "c" + c.Id.ToString();
-                            <tr>
-                                <td colspan="2">@(isEnglish ? c.NameEng : c.NameFre) @(isEnglish ? c.DescEng : c.DescFre)</td>
-                            </tr>
-                        }
-                    }
-                    else
-                    {
-                        <tr>
-                            <td colspan="2">@Localizer["No Certifications"]</td>
-                        </tr>
-                    }
-                    @if (Model.PositionCompetencyRatings.Any())
-                    {
-                        @foreach (var competencytype in Model.PositionCompetencyRatings)
-                        {
-                            if (competencytype.Any(e => e.Active != 0))
+
+                            foreach (var c in competencytype.Where(e => e.Active != 0))
                             {
+                                var key1 = "a" + c.CompetencyId.ToString();
+                                var key2 = "b" + c.CompetencyId.ToString();
                                 <tr>
-                                    <th style="background-color:#f2f2f2" width="80%"> @(isEnglish ? competencytype.FirstOrDefault()?.TypeNameEng.ToUpper() : competencytype.FirstOrDefault()?.TypeNameFre.ToUpper())</th>
-                                    <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["LEVEL"]</th>
-                                </tr>
-
-                                foreach (var c in competencytype.Where(e => e.Active != 0))
-                                {
-                                    var key1 = "a" + c.CompetencyId.ToString();
-                                    var key2 = "b" + c.CompetencyId.ToString();
-                                    <tr>
-                                        <td>
-                                            <a href="#@key1" aria-controls="centred-popup" class="wb-lbx" role="button">
-                                                @(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)
-                                            </a>
-                                            <section id="@key1" class="mfp-hide modal-dialog modal-content overlay-def">
-                                                <header class="modal-header">
-                                                    <h2 class="modal-title">@(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)</h2>
-                                                </header>
-                                                <div class="modal-body ">
-                                                    <p>@(isEnglish ? c.CompetencyDescEng : c.CompetencyDescFre)</p>
-                                                    <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
-                                                </div>
-                                            </section>
-                                        </td>
-                                        <td class="text-center">
-                                            <a href="#@key2" aria-controls="centred-popup" class="wb-lbx" role="button">
-                                                <abbr title="Level @c.RatingValue Summary">
-                                                    @c.RatingValue
-                                                </abbr>
-                                            </a>
-                                            <section id="@key2" class="mfp-hide modal-dialog modal-content overlay-def">
+                                    <td>
+                                        <a href="#@key1" aria-controls="mid-screen" class="overlay-lnk" role="button">
+                                            @(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)
+                                        </a>
+                                        <section id="@key1" class="wb-overlay modal-content overlay-def wb-popup-mid">
+                                            <header class="modal-header">
+                                                <h2 class="modal-title">@(isEnglish ? c.CompetencyNameEng : c.CompetencyNameFre)</h2>
+                                            </header>
+                                            <div class="modal-body ">
+                                                <p>@(isEnglish ? c.CompetencyDescEng : c.CompetencyDescFre)</p>
+                                                <button class="btn btn-primary pull-left overlay-close" type="button">@Localizer["Close"]</button>
+                                            </div>
+                                        </section>
+                                    </td>
+                                    <td class="text-center">
+                                        <a href="#@key2" aria-controls="mid-screen" class="overlay-lnk" role="button">
+                                            <abbr title="Level @c.RatingValue Summary">
+                                                @c.RatingValue
+                                            </abbr>
+                                        </a>
+                                        <section id="@key2" class="wb-overlay modal-content overlay-def wb-popup-mid">
                                                 <header class="modal-header">
                                                     <h2 class="modal-title">@Localizer["Position Level"]: @c.RatingValue</h2>
                                                 </header>
                                                 <div class="modal-body ">
                                                     <p>@(isEnglish ? c.RatingNameEng : c.RatingNameFre) @(isEnglish ? c.RatingDescEng : c.RatingDescFre)</p>
                                                     <p>@(isEnglish ? c.CompetencyLevelReqDescEng : c.CompetencyLevelReqDescFre)<p>
-                                                        <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
+                                                        <button class="btn btn-primary pull-left overlay-close" title="Close overlay" type="button">@Localizer["Close"]</button>
                                                 </div>
-                                            </section>
-                                        </td>
-                                    </tr>
-                                }
+                                        </section>
+                                    </td>
+                                </tr>
                             }
                         }
                     }
-                </tbody>
-            </table>
-        </div>
-    </section>
+                }
+            </tbody>
+        </table>
+    </div>
+</section>
 
 
 
