--- a/Web/Pages/Student/College/Seagoing/Crew/Deck.cshtml
+++ b/Web/Pages/Student/College/Seagoing/Crew/Deck.cshtml
@@ -30,9 +30,8 @@
                 </ul>
             </nav>
         </div>
-        <div class="mrgn-tp-sm">
             
-            <h3 class="text-center">@Localizer["results"]</h3>
+            <h2>@Localizer["results"]</h2>
 
             <table class="table table-hover table-responsive table-bordered">
                 <thead>
@@ -70,5 +69,4 @@
                     }
                 </tbody>
             </table>
-        </div>
     </section>
