--- a/Web/Pages/Student/College/Seagoing/Officer/Index.cshtml
+++ b/Web/Pages/Student/College/Seagoing/Officer/Index.cshtml
@@ -34,7 +34,7 @@
                         <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                             <div class="img-container">
                                 <figcaption class="caption text-center"><h3 class="mrgn-tp-0">@Localizer["Deck"]</h3></figcaption>
-                                <img src="~/img/CCGMember/Officer-Nav.jpg" alt="@Localizer["PhotoDeck"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                                <img src="~/img/CCGMember/Officer-Nav.jpg" alt="@Localizer["PhotoDeck"]" class="img-responsive center" />
                             </div>
                         </figure>
                     </a>
@@ -44,7 +44,7 @@
                         <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                             <div class="img-container">
                                 <figcaption class="caption text-center"><h3 class="mrgn-tp-0">@Localizer["Engineering"]</h3></figcaption>
-                                <img src="~/img/Candidate/Officer Chief Engineer.jpg" alt="@Localizer["PhotoEngineer"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                                <img src="~/img/Candidate/Officer Chief Engineer.jpg" alt="@Localizer["PhotoEngineer"]" class="img-responsive center" />
                             </div>
                         </figure>
                     </a>
@@ -54,7 +54,7 @@
                         <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                             <div class="img-container">
                                 <figcaption class="caption text-center"><h3 class="mrgn-tp-0">@Localizer["Logistics"]</h3></figcaption>
-                                <img src="~/img/Student/OfficerLogistics.jpg" alt="@Localizer["PhotoLogistics"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                                <img src="~/img/Student/OfficerLogistics.jpg" alt="@Localizer["PhotoLogistics"]" class="img-responsive center" />
                             </div>
                         </figure>
                     </a>
