--- a/Web/Pages/Student/College/Shoreside/Electronics.cshtml
+++ b/Web/Pages/Student/College/Shoreside/Electronics.cshtml
@@ -32,8 +32,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="mrgn-tp-sm">
-            <h3 class="text-center">@Localizer["results"]</h3>
+            <h2>@Localizer["results"]</h2>
             <table class="table table-hover table-responsive table-bordered">
                 <thead>
                     <tr>
@@ -75,5 +74,4 @@
                     }
                 </tbody>
             </table>
-        </div>
     </section>
