--- a/Web/Pages/Student/College/Shoreside/Trades.cshtml
+++ b/Web/Pages/Student/College/Shoreside/Trades.cshtml
@@ -30,9 +30,8 @@
                 </ul>
             </nav>
         </div>
-        <div class="mrgn-tp-sm">
 
-            <h3 class="text-center">@Localizer["results"]</h3>
+            <h2>@Localizer["results"]</h2>
             <table class="table table-hover table-responsive table-bordered">
                 <thead>
                     <tr>
@@ -82,5 +81,4 @@
                 </div>
             </div>
         -->
-        </div>
     </section>
