--- a/Web/Pages/Student/HighSchool/Seagoing/SeagoingDeck.cshtml
+++ b/Web/Pages/Student/HighSchool/Seagoing/SeagoingDeck.cshtml
@@ -29,8 +29,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="mrgn-tp-md">
-            <h3 class="text-center">@Localizer["results"]</h3>
+            <h2>@Localizer["results"]</h2>
 
             <table class="table table-hover table-responsive table-bordered">
                 <thead>
@@ -46,7 +45,7 @@
                         @foreach (var position in Model.SeagoingPositions.Where(e => e.Active != 0))
                         {
                             var routedata = new Dictionary<string, string>
-                             {
+                                     {
                     {"previouspage", "../../../Student/HighSchool/Seagoing/SeagoingDeck" },
                     { "positionid",  position.JobTitleId.ToString()},
                  };
@@ -68,5 +67,4 @@
                     }
                 </tbody>
             </table>
-        </div>
     </section>
