--- a/Web/Pages/Student/HighSchool/Shoreside/Computer.cshtml
+++ b/Web/Pages/Student/HighSchool/Shoreside/Computer.cshtml
@@ -32,8 +32,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="mrgn-tp-md">
-            <h3 class="text-center">@Localizer["results"]</h3>
+            <h2>@Localizer["results"]</h2>
             <table class="table table-hover table-responsive table-bordered">
                 <thead>
                     <tr>
@@ -49,7 +48,7 @@
                         @foreach (var position in Model.ShoreSidePositions.Where(e => e.Active != 0))
                         {
                             var routedata = new Dictionary<string, string>
-                                     {
+                                                                 {
                     {"previouspage", "../../Student/HighSchool/Shoreside/Computer" },
                     { "positionid",  position.JobTitleId.ToString()},
                  };
@@ -75,5 +74,4 @@
                     }
                 </tbody>
             </table>
-        </div>
     </section>
