--- a/Web/Pages/Student/HighSchool/Shoreside/Trades.cshtml
+++ b/Web/Pages/Student/HighSchool/Shoreside/Trades.cshtml
@@ -29,9 +29,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="mrgn-tp-md">
-
-                <h3 class="text-center">@Localizer["results"]</h3>
+                <h2>@Localizer["results"]</h2>
                 <table class="table table-hover table-responsive table-bordered">
                     <thead>
                         <tr>
@@ -47,7 +45,7 @@
                             @foreach (var position in Model.ShoreSidePositions.Where(e => e.Active != 0))
                             {
                                 var routedata = new Dictionary<string, string>
-                                                {
+                                                                        {
                                 {"previouspage", "../../Student/HighSchool/Shoreside/Trades" },
                                 { "positionid",  position.JobTitleId.ToString()},
                     };
@@ -69,5 +67,4 @@
                         }
                     </tbody>
                 </table>
-            </div>
         </section>
