--- a/Web/Pages/Student/University/Shoreside/SocialScience.cshtml
+++ b/Web/Pages/Student/University/Shoreside/SocialScience.cshtml
@@ -29,9 +29,8 @@
                 </ul>
             </nav>
         </div>
-        <div class="mrgn-tp-sm">
 
-            <h3 class="text-center">@Localizer["results"]</h3>
+            <h2>@Localizer["results"]</h2>
             <table class="table table-hover table-responsive table-bordered">
                 <thead>
                     <tr>
@@ -69,5 +68,4 @@
                     }
                 </tbody>
             </table>
-        </div>
     </section>
